samples/_failures_safe/1761270136_4e81a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea4eee9a.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_ea4eee9a.c:134:13: error: expected declaration or statement at end of input
  134 |             printf("%s [%s] %s\n", analyzer->entries[i].timestamp, analyzer->entries[i].level, analyzer->entries[i].message);
      |             ^~~~~~
./samples/SAFE/__tmp_ea4eee9a.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea4eee9a.c:134:13: error: expected declaration or statement at end of input
